--- a/ngApp/src/app/component/studyguide/studyguide.component.html
+++ b/ngApp/src/app/component/studyguide/studyguide.component.html
@@ -1,3 +1,4 @@
+<button class="btn btn-default" (click)="back()">Back</button>
 <h2>{{guide.title}}</h2>
 <img src="{{guide.image}}"/>
 <cite>by {{guide.author}} on {{guide.createdDate | date }} </cite>
