--- a/ngApp/src/app/component/admin/admin.component.css
+++ b/ngApp/src/app/component/admin/admin.component.css
@@ -1,21 +1,24 @@
-#banuser {
-    border-radius: 20px;
-    border: 2px solid #73AD21;
+.destruct {
+    border: 2px solid rgb(51,102,187);
     padding: 20px;
 }
 
 #approveuser{
-  border-radius: 20px;
-  border: 2px solid #73AD21;
+  border: 2px solid rgb(51,102,187);
   padding: 20px;
   text-align: left;
-  float: right;
 }
 
-#suspenduser {
-    border-radius: 20px;
-    border: 2px solid #73AD21;
-    padding: 20px;
+#promoteuser{
+  border: 2px solid rgb(51,102,187);
+  padding: 20px;
+  text-align: left;
+}
+
+
+.badcontainer {
+  padding-top: 10px;
+  padding-bottom: 20px;
 }
 
 ul {
