--- a/ngApp/src/app/component/profile/profile.component.html
+++ b/ngApp/src/app/component/profile/profile.component.html
@@ -5,3 +5,6 @@
   <h3>Favourite Color: {{profile.favColor}}</h3>
   <h3>E-mail: {{profile.email}}</h3>
 </div>
+<div class="badge" [ngStyle]=styleObject>
+  {{roleName}}
+</div>
