--- a/ngApp/src/app/component/studyguide/studyguide.component.css
+++ b/ngApp/src/app/component/studyguide/studyguide.component.css
@@ -1,7 +1,23 @@
 cite {
-      display: inline-block;
-      padding: 10px 0;
+  display: inline-block;
+  padding: 10px 0;
 }
-li{
-      list-style-type: none;
+
+li {
+  list-style-type: none;
+}
+
+textarea {
+  resize: none;
+}
+
+p {
+  font-size: 18px;
+}
+.guide-body{
+      font-size: 20px;
+}
+strong{
+      color: rgb(10, 200, 255);
+      font-size: 20px;
 }
