--- a/ngApp/src/app/component/login/login.component.html
+++ b/ngApp/src/app/component/login/login.component.html
@@ -20,8 +20,8 @@
         <li>
           <input type="password" name="password" [(ngModel)]="password">
         </li>
-        <li>Forgot username</li>
-        <li>Forgot password</li>
+        <li><a>Forgot username</a></li>
+        <li><a>Forgot password</a></li>
       </ul>
     </div>
     <div class="modal-footer">
