--- a/ngApp/src/app/component/studyguide/studyguide.component.css
+++ b/ngApp/src/app/component/studyguide/studyguide.component.css
@@ -14,10 +14,30 @@ textarea {
 p {
   font-size: 18px;
 }
-.guide-body{
-      font-size: 20px;
+
+.guide-body {
+  font-size: 20px;
+  margin-bottom: 40px;
 }
-strong{
-      color: rgb(10, 200, 255);
-      font-size: 20px;
+
+.legend {
+  margin-bottom: 15px;
+  margin-left: 150px;
+  text-align: left;
+}
+
+strong {
+  color: rgb(10, 200, 255);
+  font-size: 20px;
+}
+
+.backer {
+  margin-left: 100px;
+  text-align: left;
+}
+
+.submitter {
+  margin-top: 10px;
+  text-align: right;
+  margin-right: 190px;
 }
