--- a/ngApp/src/app/component/studyguide/studyguide.component.html
+++ b/ngApp/src/app/component/studyguide/studyguide.component.html
@@ -1,26 +1,35 @@
-<button class="btn btn-default" (click)="back()">Back</button>
-<h2>{{guide?.title}}</h2>
-<div>
-<img src="{{guide?.imgUrl}}"/>
-</div>
-<cite>by {{guide?.author}} on {{guide?.createdDate.nano | date }} </cite>
-<div class="guide-body">
+<div class="container">
+  <div class="backer">
+    <button class="btn btn-default" (click)="back()">Back</button>
+  </div>
+  <h2>{{guide?.title}}</h2>
+  <div>
+    <img src="{{guide?.imgUrl}}" />
+  </div>
+  <cite>by {{guide?.author}} on {{guide?.createdDate.nano | date }} </cite>
+  <div class="guide-body">
     <div *ngFor="let paragraph of guide?.body">
-        {{paragraph}}
+      {{paragraph}}
     </div>
+  </div>
+  <div class="legend">    
+  <strong>Comments</strong>
+</div>    
+  <div *ngIf="guide?.comments.length <=0">
+    <p> No comments yet!</p>
+  </div>
 
-<strong>Comments</strong>
-<div *ngIf="guide?.comments.length <=0">
-        <p> No comments yet!</p>
-</div>
-<div *ngIf="guide?.comments.length > 0">
+  <div *ngIf="guide?.comments.length > 0">
     <div *ngFor="let comment of guide?.comments">
-        <p>{{comment}}</p>
+      <p>{{comment}}</p>
     </div>
-</div>
-<div><strong style="color:grey">Add Comments</strong></div>
-<textarea [(ngModel)]="guideBody" (ngModelChange)="parseTextArea()" rows="5"></textarea>
-<div>
+  </div>
+  <div class="legend">    
+    <strong style="color:grey">Add Comments</strong>
+  </div>
+  <textarea [(ngModel)]="guideBody" (ngModelChange)="parseTextArea()" cols="100" rows="5"></textarea>
+  <div class="submitter">
     <button class="btn btn-primary btn-large">Submit Comment</button>
-</div>
+  </div>
+
 </div>
