Stylized create quiz

--- a/ngApp/src/app/component/create/createquiz/createquiz.component.html
+++ b/ngApp/src/app/component/create/createquiz/createquiz.component.html
@@ -1,13 +1,25 @@
 <div class="row">
-  <h1>Quiz Title</h1>
-  <input type="input" [(ngModel)]="quiz.quizTitle"/>
-  <h2>Quiz Topic</h2>
-  <input type="input" [(ngModel)]="quiz.quizTopic"/>
+  <div class="col-sm-6 head">
+    <h2 class="left">Quiz Title</h2>
+    <div class="col-sm-8">
+        <input type="input" class="form-control" [(ngModel)]="quiz.quizTitle" placeholder="Title"/>
+    </div>
+  </div>
+
+  <div class="col-sm-6 head">
+    <h2 class="left">Quiz Topic</h2>
+    <div class="col-sm-8">
+      <input type="input" class="form-control" [(ngModel)]="quiz.quizTopic" placeholder="Topic"/>
+    </div>
+  </div>
 </div>
+
 <div>
   <div *ngFor="let q of questions">
     <app-question [quizObject]="q"></app-question>
   </div>
-  <button type="button" (click)="add()">Add Question</button>
-  <button type="button" (click)="submit()">Submit</button>
+  <div class="buttonbox">
+    <button type="button" class="btn btn-primary" (click)="add()">Add Question</button>
+    <button type="button" class="btn btn-success" (click)="submit()">Submit</button>
+  </div>
 </div>
