partially completed smoke testing. Most page factories are complete. Remaining smoke testing: Navigating within a chosen quiz topic and returning filling in info on login modal. filling in info on user registration page. ensuring fields are accessible on create page within createTest and newQuestion components. navigate study guide page (requires page to function properly in accessing back end) Functional testing to follow once these are completed and succeed.

--- a/ngApp/src/app/component/browse/browseTopic/browseTopic.component.html
+++ b/ngApp/src/app/component/browse/browseTopic/browseTopic.component.html
@@ -1,6 +1,6 @@
 <h3>{{topic.name}}</h3>
 <div class="container">
-  <button class="btn btn-default" (click)="goBack()">Go Back</button>
+  <button id = "back-btn" class="btn btn-default" (click)="goBack()">Go Back</button>
   <ul class="quizs">
     <li id="quizs" *ngFor="let quiz of quizs">
 
