--- a/ngApp/src/app/component/quiz/quiz.component.html
+++ b/ngApp/src/app/component/quiz/quiz.component.html
@@ -1,7 +1,7 @@
 <h2>{{quiz.quizTitle}}</h2>
 <h4>By: {{quiz.username}}</h4>
 <div class="container">
-  <button class="btn btn-default" (click)="goBack()">Go Back</button>
+  <button id = "back-btn" class="btn btn-default" (click)="goBack()">Go Back</button>
 
 
   <div class="quiz-section">
